# software_challenge

software_training/: CMakeLists.txt  package.xml
software_training/action/: MovingTurtle.action
software_training/include/software_training/: visibility.h
software_training/launch/: launch.py
software_training/msg/: Distance.msg
software_training/src/: clear_turtle.cpp  distance_publisher.cpp  distance_subscriber.cpp  moving_turtle_client.cpp  moving_turtle_server.cpp  reset_moving_turtle.cpp  reset_moving_turtle_client.cpp  spawn_turtle.cpp  turtle1_circle.cpp
